# ChangeLog for media-sound/gnomeradio
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.6 2003/08/23 14:15:47 foser Exp $

*gnomeradio-1.4 (15 Feb 2003)

  23 Aug 2003; foser <foser@gentoo.org> gnomeradio-1.4.ebuild :
  Added lirc USE flag stuff (#9072)
  fix (R)DEP order

  15 Feb 2003; foser <foser@gentoo.org> gnomeradio-1.4.ebuild :
  New version, fixed deps

*gnomeradio-1.3 (23 Oct 2002)

  23 Oct 2002; foser <foser@gentoo.org> :
  New version, fixed deps. Thanks to Markus Bertheau <twanger@bluetwanger.de>

*gnomeradio-1.2.1 (26 Jul 2002)
  26 Jul 2002; Spider <spider@gentoo.org> gnomeradio-1.2.1.ebuild:
  eclassified, new version

*gnomeradio-1.2 (16 Jul 2002)

  16 Jul 2002; Gabriele Giorgetti <stroke@gentoo.org> gnomeradio-1.2.ebuild :
  
  Initial cvs import. A Radio Tuner For GNOME2