@@ -1,4 +1,4 @@
-MD5 2c91206588ce9d6bea7d93b9fc90e3c0 gnomeradio-1.4.ebuild 758
-MD5 6925d25d792ab7cfbb510a5817644844 ChangeLog 905
+MD5 7ef676b3638e0cfea473aa42337afd86 gnomeradio-1.4.ebuild 788
+MD5 517f4c55c6fab217f5a93b3f75577b78 ChangeLog 1005
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
 MD5 ae87ec7d399d7b593b65aee83ea7e440 files/digest-gnomeradio-1.4 66
