@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/gnomeradio-1.4.ebuild,v 1.3 2003/08/23 14:15:47 foser Exp $ 
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/gnomeradio-1.4.ebuild,v 1.4 2003/08/27 02:19:33 obz Exp $ 
 
 inherit gnome2
 
@@ -19,7 +19,8 @@ RDEPEND=">=gnome-base/libgnomeui-2
 
 DEPEND="${RDEPEND}
 	>=dev-util/pkgconfig-0.12.0
-	>=dev-util/intltool-0.21"
+	>=dev-util/intltool-0.21
+	>=app-text/scrollkeeper-0.3.11"
 
 DOCS="ABOUT-NLS AUTHORS ChangeLog COPYING README* INSTALL NEWS TODO"
 
