@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/gnomeradio
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.6 2003/08/23 14:15:47 foser Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/gnomeradio/Attic/ChangeLog,v 1.7 2003/08/27 02:19:32 obz Exp $
+
+  27 Aug 2003; Mike Gardiner <obz@gentoo.org> gnomeradio-1.4.ebuild:
+  Added scrollkeeper to depends
 
 *gnomeradio-1.4 (15 Feb 2003)
 
